config.json: updated domain

--- a/data/config.json
+++ b/data/config.json
@@ -71,5 +71,6 @@
                 "new_window": true
             }
         ]
-    }
+    },
+    "domain": "https://graceful-europa-208ea.netlify.app"
 }
